# manager-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/api/: deps.py  main.py
app/api/routes/: __init__.py  analytics.py  budgets.py  health.py  telegram.py  webapp.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/models/: __init__.py  finance.py
app/schemas/: __init__.py  base.py  budget.py  category.py  report.py  transaction.py  user.py  webapp.py
app/services/: assistant.py  budgets.py  receipt_ai.py  reports.py  statement_import.py  transactions.py  users.py
app/tasks/: reminders.py
app/telegram/: bot.py  keyboards.py
app/utils/: categories.py  dates.py  merchants.py  ngrok.py  subscriptions.py  telegram_webapp.py  text.py  web_session.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_user_preferences.py  0003_add_assistant_feedback.py
project-catalog-images/: REPORT.md
tests/: conftest.py  test_app_import.py  test_bot_parsing.py  test_dates.py
webapp/: app.analytics.js  app.config.js  app.core.js  app.js  app.state.js  app.transactions.js  auth.js  helpers.js  index.html  styles.css
