[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manager-bot"
version = "0.1.0"
description = "Finance tracking Telegram bot with FastAPI backend, analytics, and scheduling."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Portfolio Bot", email = "bot@example.com" }
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-telegram-bot>=21.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "redis>=5.0",
    "apscheduler>=3.10",
    "sentry-sdk>=1.39",
    "loguru>=0.7",
    "rich>=13.7",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "openai>=1.31"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "migrations",
    "webapp",
    ".env.example",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "LICENSE",
    "pyproject.toml",
    "alembic.ini",
    "docker-compose.yml",
    "Dockerfile",
]
